--- a/styles/components/profile/profile.css
+++ b/styles/components/profile/profile.css
@@ -1,4 +1,5 @@
 .profile {
+  grid-row: 1 / 3;
   border-radius: 0.8em;
   background-color: var(--dark-blue);
 }
@@ -58,4 +59,26 @@
 
 .profile__timeline-controller:checked + .profile__timeline-switcher {
   color: var(--white);
+}
+
+@media (min-width: 850px) {
+  .profile {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profile__about-user {
+    flex-direction: column;
+    gap: 1.5em;
+    flex-grow: 1;
+  }
+
+  .profile__username {
+    font-size: 2.2em;
+  }
+
+  .profile__timelines-container {
+    flex-direction: column;
+    gap: 1.3em;
+  }
 }
